# APCPPLib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  main.cpp  project_name
Lib/src/: Makefile
include/: macro.hpp
lib/src/Algorithm/: BubbleSort.hpp
lib/src/Benchmarking/: Breakpoint.hpp
lib/src/Game/: AScene.cpp  AScene.hpp  IScene.hpp  SceneStateMachine.cpp  SceneStateMachine.hpp
lib/src/Log/: Logger.cpp  Logger.hpp
lib/src/Maths/: Factorial.hpp  Triangles.hpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
lib/src/Utils/: LibraryLoader.cpp  LibraryLoader.hpp  Tuples.hpp
src/: main.cpp
tests/Algorithm/: test_bubbleSort.cpp
tests/Exception/: test_exception.cpp
tests/Game/: test_sceneStateMachine.cpp
tests/Log/: test_logger.cpp
tests/Utils/: test_tuples.cpp
